--- a/src/htdocs/css/util/_lightbox.scss
+++ b/src/htdocs/css/util/_lightbox.scss
@@ -69,7 +69,7 @@
 
     h4 {
       font-size: 1.375rem;
-      margin: 1.5rem 0 .75rem;
+      margin-top: 1.5rem;
 
       &:first-child {
         margin-top: .25rem;
