use dash-name instead of camelCase for ids/classes

--- a/src/htdocs/css/_legendBar.scss
+++ b/src/htdocs/css/_legendBar.scss
@@ -1,7 +1,7 @@
 @use 'util/opt/variables' as *;
 
 @layer default {
-  #legendBar {
+  #legend-bar {
     h2 + ul > li {
       border-top: 1px solid var(--border-color-lighter);
       font-family: $font-family-headers;
