--- a/src/htdocs/css/_selectBar.scss
+++ b/src/htdocs/css/_selectBar.scss
@@ -45,7 +45,7 @@ $reset-button-color: #efefef;
     }
   }
 
-  #selectBar {
+  #select-bar {
     button {
       margin-bottom: 1.5rem; // ensure StatusBar doesn't obscure button
 
