--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -1,7 +1,7 @@
 @use 'util/opt/variables' as *;
 
 @layer default {
-  #summaryPane {
+  #summary-pane {
     margin-top: -2.25rem;
     transition: margin $effect-duration ease; // SideBar open/close
 
