--- a/src/htdocs/css/_titleBar.scss
+++ b/src/htdocs/css/_titleBar.scss
@@ -1,5 +1,5 @@
 @layer default {
-  #titleBar {
+  #title-bar {
     a {
       color: var(--text-color);
       text-decoration-color: transparent;
