--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -7,7 +7,7 @@ $bg-color-error: rgba(223, 62, 62, .92);
 $height: 3rem;
 
 @layer default {
-  #statusBar {
+  #status-bar {
     bottom: 0;
     box-shadow: 0 -2px 12px 0 rgba(0, 0, 0, .1);
     height: $height;
