--- a/src/htdocs/css/features/_pager.scss
+++ b/src/htdocs/css/features/_pager.scss
@@ -17,6 +17,7 @@
 
     .exposure {
       > div {
+        align-items: flex-start;
         display: flex;
         flex-wrap: wrap;
         gap: 1.5rem 2.5rem;
