add Lora (serif) font for headers

--- a/src/htdocs/css/_infoBar.scss
+++ b/src/htdocs/css/_infoBar.scss
@@ -34,7 +34,7 @@
           color: var(--bg-color);
           content: counter(item);
           display: flex;
-          font: bold 1rem $font-family-headers;
+          font: 600 $font-size $font-family-labels;
           height: 1.75rem;
           justify-content: center;
           left: 0;
