--- a/src/htdocs/css/features/_shakemapStations.scss
+++ b/src/htdocs/css/features/_shakemapStations.scss
@@ -67,6 +67,10 @@
 
   // Map popups
   .shakemap-stations {
+    h5 strong {
+      font-weight: 500;
+    }
+
     .channels {
       em {
         font-size: $font-size-smaller;
