--- a/src/htdocs/css/util/controls/_radiobar.scss
+++ b/src/htdocs/css/util/controls/_radiobar.scss
@@ -12,7 +12,7 @@
       border-left: 1px solid var(--accent-color);
       color: var(--accent-color);
       cursor: pointer;
-      font: 600 .8125rem $font-family-headers;
+      font: 600 .8125rem $font-family-labels;
       margin: 0;
       padding: .25rem .5rem;
       text-align: center;
