--- a/src/htdocs/css/util/opt/_variables.scss
+++ b/src/htdocs/css/util/opt/_variables.scss
@@ -16,7 +16,8 @@ $effect-slide-duration: .175s;
 
 $font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-family-buttons: Tahoma, Verdana, sans-serif;
-$font-family-headers: 'Open Sans', sans-serif;
+$font-family-headers: 'Lora', Georgia, serif;
+$font-family-labels: 'Open Sans', sans-serif;
 $font-size: 16px;
 $font-size-smaller: .875rem;
 $font-size-smallest: .75rem;
