--- a/src/htdocs/css/features/_forecast.scss
+++ b/src/htdocs/css/features/_forecast.scss
@@ -26,8 +26,9 @@
     h5 {
       background: var(--bg-color-darker);
       border-radius: $button-border-radius $button-border-radius 0 0;
+      font: 1.25rem/1 $font-family-labels;
       margin: 0;
-      padding: .125rem 0;
+      padding: .25rem 0;
       transition: $effect-duration ease-in-out {
         property: background, color;
       };
@@ -129,7 +130,7 @@
     }
 
     .probability {
-      font: 1.25rem $font-family-buttons;
+      font: 500 1.25rem $font-family-headers;
       transition: color $effect-duration ease-in-out;
     }
   }
