--- a/src/htdocs/css/features/util/_earthquakes.scss
+++ b/src/htdocs/css/features/util/_earthquakes.scss
@@ -371,7 +371,7 @@
               color: var(--text-color-lighter);
               content: 'Sort by:';
               display: block;
-              font-family: $font-family-headers;
+              font-family: $font-family-labels;
               padding: .25rem 0 .25rem .375rem;
             }
 
