--- a/src/htdocs/css/util/opt/_mixins.scss
+++ b/src/htdocs/css/util/opt/_mixins.scss
@@ -94,7 +94,7 @@
 
 @mixin labels() {
   color: var(--text-color-lighter);
-  font-family: $font-family-headers;
+  font-family: $font-family-labels;
   font-weight: 600;
   text-transform: uppercase;
 }
