--- a/src/htdocs/css/features/_significantEqs.scss
+++ b/src/htdocs/css/features/_significantEqs.scss
@@ -61,7 +61,7 @@
       }
 
       h4 {
-        font-size: 1.125rem;
+        font-size: $font-size-larger;
         margin: -.125rem 0 .375rem;
       }
     }
