--- a/src/htdocs/css/_legendBar.scss
+++ b/src/htdocs/css/_legendBar.scss
@@ -4,7 +4,7 @@
   #legend-bar {
     h2 + ul > li {
       border-top: 1px solid var(--border-color-lighter);
-      font: 1.125rem $font-family-headers;
+      font: $font-size-larger $font-family-headers;
       padding: .625rem 0;
 
       &:first-child {
