--- a/src/htdocs/css/features/util/_earthquakes.scss
+++ b/src/htdocs/css/features/util/_earthquakes.scss
@@ -10,7 +10,7 @@
     }
 
     .description {
-      font-size: 1.125rem;
+      font-size: $font-size-larger;
       line-height: 1.5;
       margin-top: 0;
     }
