--- a/src/htdocs/css/util/controls/_buttons.scss
+++ b/src/htdocs/css/util/controls/_buttons.scss
@@ -33,7 +33,7 @@
     border-radius: $button-border-radius;
     color: var(--accent-color);
     cursor: pointer;
-    font: 600 1.125rem/1 $font-family-labels;
+    font: 600 #{$font-size-larger}/1 $font-family-labels;
     margin: 0;
     padding: .375rem .75rem;
     text-transform: uppercase;
