--- a/src/htdocs/css/util/opt/_variables.scss
+++ b/src/htdocs/css/util/opt/_variables.scss
@@ -19,6 +19,7 @@ $font-family-buttons: Tahoma, Verdana, sans-serif;
 $font-family-headers: 'Lora', Georgia, serif;
 $font-family-labels: 'Open Sans', sans-serif;
 $font-size: 16px;
+$font-size-larger: 1.125rem;
 $font-size-smaller: .875rem;
 $font-size-smallest: .75rem;
 
