use $font-size var

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -266,7 +266,7 @@
 
       em {
         display: block;
-        font-size: 1rem;
+        font-size: $font-size;
         font-style: normal;
         margin-top: .125rem;
       }
