--- a/src/htdocs/css/_selectBar.scss
+++ b/src/htdocs/css/_selectBar.scss
@@ -59,7 +59,7 @@ $reset-button-color: #efefef;
 
       span {
         color: var(--text-color-lighter);
-        font-size: 1rem;
+        font-size: $font-size;
         margin-left: .3rem;
 
         &:after {
