--- a/src/htdocs/css/util/leaflet/_overrides.scss
+++ b/src/htdocs/css/util/leaflet/_overrides.scss
@@ -8,7 +8,7 @@
   }
 
   .leaflet-container {
-    font: 1rem $font-family;
+    font: $font-size $font-family;
     outline: none;
   }
 
@@ -135,7 +135,7 @@
 
   .leaflet-popup-content {
     color: var(--text-color);
-    font-size: 1rem;
+    font-size: $font-size;
     line-height: normal;
     margin: .75rem 1rem;
   }
