set base font-size (px) on body element only

--- a/src/htdocs/css/_base.scss
+++ b/src/htdocs/css/_base.scss
@@ -60,7 +60,7 @@
     background: var(--bg-color-darker);
     box-sizing: border-box;
     color: var(--text-color);
-    font: $font-size $font-family;
+    font: 16px $font-family;
   }
 
   h1,
