--- a/src/htdocs/css/util/opt/_variables.scss
+++ b/src/htdocs/css/util/opt/_variables.scss
@@ -18,7 +18,7 @@ $font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-family-buttons: Tahoma, Verdana, sans-serif;
 $font-family-headers: 'Lora', Georgia, serif;
 $font-family-labels: 'Open Sans', sans-serif;
-$font-size: 16px;
+$font-size: 1rem;
 $font-size-larger: 1.125rem;
 $font-size-smaller: .875rem;
 $font-size-smallest: .75rem;
