--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -125,10 +125,10 @@
 
     .mainshock {
       .bubble {
-        margin: 1rem .5rem 0;
+        margin-top: 1rem;
 
         &.details {
-          margin: 0 0 -.25rem 0 ;
+          margin: 0 0 -.25rem 0;
         }
       }
 
@@ -164,10 +164,7 @@
     }
 
     .products {
-      align-items: flex-start;
-      display: flex;
-      flex-wrap: wrap;
-      margin: 0 -.5rem;
+      display: grid;
 
       div {
         max-width: 100%;
