add link to Settings from StatusBar on param error

--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -21,6 +21,15 @@ $height: 3rem;
       transition: height $effect-duration ease-in .25s;
     }
 
+    a {
+      color: #fff;
+      text-decoration-color: color.scale(#fff, $alpha: -40%);
+
+      &:hover {
+        text-decoration-color: color.scale(#fff, $alpha: -10%);
+      }
+    }
+
     div {
       align-items: center;
       background: $bg-color;
