add :active styles to links

--- a/src/htdocs/css/_base.scss
+++ b/src/htdocs/css/_base.scss
@@ -36,6 +36,10 @@
       text-decoration-color: color.scale($accent-color, $lightness: 25%);
       transition-duration: $effect-on-duration;
     }
+
+    &:active {
+      text-decoration-color: var(--accent-color);
+    }
   }
 
   abbr {
