--- a/src/htdocs/css/_titleBar.scss
+++ b/src/htdocs/css/_titleBar.scss
@@ -8,6 +8,10 @@
         color: var(--text-color-darker);
         text-decoration-color: var(--text-color-lighter);
       }
+
+      &:active {
+        text-decoration-color: var(--text-color);
+      }
     }
 
     h1,
