--- a/src/htdocs/css/util/_impactBubbles.scss
+++ b/src/htdocs/css/util/_impactBubbles.scss
@@ -128,16 +128,9 @@
   }
 
   .impact-bubbles {
-    display: flex;
+    column-gap: 5px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     margin: 1rem 0;
-
-    :is(a, span) + :is(a, span) {
-      margin-left: 5px;
-    }
-
-    > a,
-    > span {
-      width: 25%;
-    }
   }
 }
