--- a/src/htdocs/css/_selectBar.scss
+++ b/src/htdocs/css/_selectBar.scss
@@ -74,5 +74,9 @@ $reset-button-color: #efefef;
     label {
       margin-top: 1rem;
     }
+
+    .props {
+      margin-bottom: .25rem;
+    }
   }
 }
