add DD mainshock pane

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -46,7 +46,8 @@
       z-index: 424;
     }
 
-    .leaflet-mainshock-pane {
+    .leaflet-mainshock-pane,
+    .leaflet-dd-mainshock-pane {
       z-index: 423;
     }
 
