--- a/src/htdocs/css/features/_forecast.scss
+++ b/src/htdocs/css/features/_forecast.scss
@@ -39,7 +39,7 @@
       flex-wrap: wrap;
 
       > li {
-        margin: 1rem 1rem 0 0;
+        margin: 0 1rem 0 0;
 
         &:last-child {
           margin-right: 0;
@@ -78,6 +78,8 @@
     }
 
     .probabilities {
+      margin-top: 1.25rem;
+
       a {
         border: 1px solid var(--border-color);
         border-radius: $button-border-radius;
