move leaflet control’s margin to overrides

--- a/src/htdocs/css/util/leaflet/_overrides.scss
+++ b/src/htdocs/css/util/leaflet/_overrides.scss
@@ -175,4 +175,8 @@
   .leaflet-tooltip-right:before {
     border-right-color: var(--bg-color);
   }
+
+  .leaflet-top .leaflet-control {
+    margin-top: 7.75rem;
+  }
 }
